compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__let_assert__more_than_one_var.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go(x) {\n  let assert [1, a, b, c] = x\n  [a, b, c]\n}"
---
----- SOURCE CODE
pub fn go(x) {
  let assert [1, a, b, c] = x
  [a, b, c]
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec go(list(integer())) -> list(integer()).
go(X) ->
    [1, A, B, C] = case X of
        [1, _, _, _] -> X;
        _assert_fail ->
            erlang:error(#{rakun_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2})
    end,
    [A, B, C].
